<resources>
    <string name="app_name">Agrosup_app</string>

    <string name="login_loginTV">Zaloguj się</string>
    <string name="login_submitBTN">Zaloguj</string>
    <string name="login_emailHint">e-mail</string>
    <string name="login_passwordHint">password</string>
    <string name="login_incorrectCredentials">Nieprawidłowe dane</string>
    <string name="login_successfullSynchronization">Zalogowano pomyślnie</string>

    <string name="sync_errorServerApi">Błąd połączenia z serwerem</string>
    <string name="sync_errorOperatorApi">Błąd wczytywania(operator)</string>
    <string name="sync_errorYearPlanApi">Błąd wczytywania(yearPlan)</string>
    <string name="sync_errorFieldApi">Błąd wczytywania(field)</string>
    <string name="sync_errorParcelApi">Błąd wczytywania(parcel)</string>
    <string name="sync_errorUserApi">Błąd wczytywania(user)</string>
    <string name="sync_errorTokenApi">Błąd wczytywania(token)</string>

    <string name="main_logoTV">AgroSup</string>
    <string name="main_treatmentBTN">Zabiegi</string>
    <string name="main_farmBTN">Gospodarstwo</string>
    <string name="main_settingsBTN">Ustawienia</string>
    <string name="main_logoutBTN">Wyloguj</string>
    <string name="main_chooseYearPlanToast">Wybierz sezon</string>

    <string name="settings_yearPlanTV">Plan:</string>
    <string name="settings_operatorTV">Operator:</string>
    <string name="settings_impulsTV">Ilość impulsów:</string>
    <string name="settings_saveBTN">Zapisz</string>
    <string name="settings_savedToast">Zapisano</string>

    <string name="farm_fieldsBTN">Pola</string>
    <string name="farm_historyBTN">Historia zabiegów</string>
    <string name="farm_summaryBTN">Podsumowanie</string>
    <string name="farm_yearPlanTV">Sezon</string>

    <string name="summary_fuelTV">Paliwo:</string>
    <string name="summary_wholeFarmTV">Całe gospodarstwo:</string>

    <string name="treatments_startBTN">Zacznij zabieg</string>
    <string name="treatments_machniesBTN">Maszyny</string>
    <string name="startTreatment_convertError">Błąd przy konwersji</string>
    <string name="startTreatment_fetchParcelError">Błąd przy pobieraniu informacji</string>


    <string name="startTreatment_deviceNotSupportBluetooth">Twoje urządznie nie obsługuje bluetooth</string>
    <string name="startTreatment_bluetoothNotAccepted">Musisz włączyć bluetooth</string>


</resources>
