<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_logoTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:text="@string/main_logoTV"
        android:textSize="40sp" />

    <Button
        android:id="@+id/main_treatmentBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dip"
        android:width="250dip"
        android:minHeight="60dip"
        android:text="@string/main_treatmentBTN" />

    <Button
        android:id="@+id/main_farmBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dip"
        android:width="250dip"
        android:minHeight="60dip"
        android:text="@string/main_farmBTN"
        android:textSize="14sp" />

    <Button
        android:id="@+id/main_settingsBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dip"
        android:width="250dip"
        android:minHeight="60dip"
        android:text="@string/main_settingsBTN"
        android:textSize="14sp" />

    <Button
        android:id="@+id/main_logoutBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dip"
        android:width="250dip"
        android:minHeight="60dip"
        android:text="@string/main_logoutBTN" />
</LinearLayout>