<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".FarmActivity">

    <TextView
        android:id="@+id/farm_yearPlanTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:textSize="40sp" />

    <Button
        android:id="@+id/farm_fieldsBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:width="250dip"
        android:minHeight="60dip"
        android:text="@string/farm_fieldsBTN" />

    <Button
        android:id="@+id/farm_historyBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:width="250dip"
        android:minHeight="60dip"
        android:text="@string/farm_historyBTN" />

    <Button
        android:id="@+id/farm_summaryBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:width="250dip"
        android:minHeight="60dip"
        android:text="@string/farm_summaryBTN" />
</LinearLayout>