<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".SettingsActivity">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/settings_planTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:gravity="end"
                android:text="@string/settings_yearPlanTV"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/settings_yearPlanSPN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dip" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/settings_operatorTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:gravity="end"
                android:text="@string/settings_operatorTV"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/settings_operatorSPN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dip" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/settings_impulsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:gravity="end"
                android:text="@string/settings_impulsTV"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/settings_impulsET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:ems="10"
                android:inputType="number" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/settings_saveBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:width="250dip"
        android:text="@string/settings_saveBTN" />

</LinearLayout>